--- a/index.html
+++ b/index.html
@@ -15,50 +15,58 @@
             <div class = "container">
                 <div class = "cards">
                     <div class = "card-one">
-                        <div class = "avatar-container">
+                        <div class = "card-one-container">
                             <img class = "avatar-daniel" src = "images/image-daniel.jpg" alt = "">
+                            <img class = "pattern-quotation" src = "images/bg-pattern-quotation.svg" alt = "">
+                            <h1 class = "h1-card-one">Daniel Clifford</h1>
+                            <h2 class = "h2-card-one">Verified Graduate</h2>
+                            <h3 class = "h3-card-one">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny's worth.</h3>
+                            <p class = "p-card-one">" I was an EMT for many years before I joined the bootcamp. I've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best -and most grueling- time of my life. Since completing the course, I've successfully switched careers, working as a Software Engineer at a VR startup. "</p>
                         </div>
-                        <img class = "pattern-quotation" src = "images/bg-pattern-quotation.svg" alt = "">
-                        <h1 class = "h1-card-one">Daniel Clifford</h1>
-                        <h2 class = "h2-card-one">Verified Graduate</h2>
-                        <h3 class = "h3-card-one">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny's worth.</h3>
-                        <p class = "p-card-one">" I was an EMT for many years before I joined the bootcamp. I've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best -and most grueling- time of my life. Since completing the course, I've successfully switched careers, working as a Software Engineer at a VR startup. "</p>
                     </div>
                     <div class = "card-two">
-                        <div class = "avatar-container">
-                            <img class = "avatar-jonathan" src = "images/image-jonathan.jpg" alt = "">
+                        <div class = "card-two-container">
+                            <div class = "avatar-container">
+                                <img class = "avatar-jonathan" src = "images/image-jonathan.jpg" alt = "">
+                            </div>
+                            <h1 class = "h1-card-two">Jonathan Walters</h1>
+                            <h2 class = "h2-card-two">Verified Graduate</h2>
+                            <h3 class = "h3-card-two">The team was very supportive and kept me motivated</h3>
+                            <p class = "p-card-two">" I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I've made in myself. "</p>
                         </div>
-                        <h1 class = "h1-card-two">Jonathan Walters</h1>
-                        <h2 class = "h2-card-two">Verified Graduate</h2>
-                        <h3 class = "h3-card-two">The team was very supportive and kept me motivated</h3>
-                        <p class = "p-card-two">"I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I've made in myself. "</p>
                     </div>
                     <div class = "card-three">
-                        <div class = "avatar-container">
-                            <img class = "avatar-jeanette" src = "images/image-jeanette.jpg" alt = "">
+                        <div class = "card-three-container">
+                            <div class = "avatar-container">
+                                <img class = "avatar-jeanette" src = "images/image-jeanette.jpg" alt = "">
+                            </div>
+                            <h1 class = "h1-card-three">Jeanette Harmon</h1>
+                            <h2 class = "h2-card-three">Verified Graduate</h2>
+                            <h3 class = "h3-card-three">An overall wonderful and rewarding experience</h3>
+                            <p class = "p-card-three">" Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. "</p>
                         </div>
-                        <h1 class = "h1-card-three">Jeanette Harmon</h1>
-                        <h2 class = "h2-card-three">Verified Graduate</h2>
-                        <h3 class = "h3-card-three">An overall wonderful and rewarding experience</h3>
-                        <p class = "p-card-three">"Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. "</p>
                     </div>
                     <div class = "card-four">
-                        <div class = "avatar-container">
-                            <img class = "avatar-patrick" src = "images/image-patrick.jpg" alt = "">
+                        <div class = "card-four-container">
+                            <div class = "avatar-container">
+                                <img class = "avatar-patrick" src = "images/image-patrick.jpg" alt = "">
+                            </div>
+                            <h1 class = "h1-card-four">Patrick Abrams</h1>
+                            <h2 class = "h2-card-four">Verified Graduate</h2>
+                            <h3 class = "h3-card-four">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h3>
+                            <p class = "p-card-four">" The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. "</p>
                         </div>
-                        <h1 class = "h1-card-four">Patrick Abrams</h1>
-                        <h2 class = "h2-card-four">Verified Graduate</h2>
-                        <h3 class = "h3-card-four">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h3>
-                        <p class = "p-card-four">"The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. "</p>
                     </div>
                     <div class = "card-five">
-                        <div class = "avatar-container">
-                            <img class = "avatar-kira" src = "images/image-kira.jpg" alt = "">
+                        <div class = "card-five-container">
+                            <div class = "avatar-container">
+                                <img class = "avatar-kira" src = "images/image-kira.jpg" alt = "">
+                            </div>
+                            <h1 class = "h1-card-five">Kira Whittle</h1>
+                            <h2 class = "h2-card-five">Verified Graduate</h2>
+                            <h3 class = "h3-card-five">Such a life-changing experience. Highly recommended!</h3>
+                            <p class = "p-card-five">" Before joining the bootcamp, I've never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I've often referred to it during interviews as an example of my development experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100 % recommend! "</p>
                         </div>
-                        <h1 class = "h1-card-five">Kira Whittle</h1>
-                        <h2 class = "h2-card-five">Verified Graduate</h2>
-                        <h3 class = "h3-card-five">Such a life-changing experience. Highly recommended!</h3>
-                        <p class = "p-card-five">"Before joining the bootcamp, I've never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I've often referred to it during interviews as an example of my development experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100 % recommend! "</p>
                     </div>
                 </div>
             </div>
